alignment fixed

--- a/css/projects.css
+++ b/css/projects.css
@@ -202,7 +202,7 @@
 
             .item p {
                 width: 95%;
-                font-size: 12px;
+                font-size: 14px;
             }
 
             .item img {
